compiler/test/fail_compilation/fail21740a.i
/*
TEST_OUTPUT:
---
fail_compilation/fail21740a.i(7): Error: `=`, `;` or `,` expected to end declaration instead of `)`
---
*/
int a\U000000aa);
